Allow horizontal scrollbar in non-fixed-width mode

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -67,6 +67,7 @@ $sort-direction-color: royalblue;
       overflow-y: visible;
 
       .rvt-virtual-table-container-inner {
+        min-width: min-content;
         overflow: hidden;
       }
     }
